--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Latex
 **/*.aux
 **/*.bbl
 **/*.blg
@@ -8,7 +9,11 @@
 **/*.toc
 **/*.vrb
 **/_minted*
+
+# Vim
 **/*.swp
+
+# Java
 **/*.class
 
 __pycache__
